projeto errado commit

--- a/Pages/ProdutoCRUD/Edit.cshtml
+++ b/Pages/ProdutoCRUD/Edit.cshtml
@@ -2,12 +2,11 @@
 @model AspNetCoreWebApp.Pages.ProdutoCRUD.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edição de Produto";
 }
 
-<h1>Edit</h1>
+<h1>@ViewData["Title"]</h1>
 
-<h4>ProdutoModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -35,14 +34,14 @@
                 <span asp-validation-for="ProdutoModel.Estoque" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index">Voltar à Listagem</a>
 </div>
 
 @section Scripts {
