--- a/Pages/ProdutoCRUD/Details.cshtml
+++ b/Pages/ProdutoCRUD/Details.cshtml
@@ -2,13 +2,12 @@
 @model AspNetCoreWebApp.Pages.ProdutoCRUD.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes de Produto";
 }
 
-<h1>Details</h1>
+<h1>@ViewData["Title"]</h1>
 
 <div>
-    <h4>ProdutoModel</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -38,6 +37,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.ProdutoModel.IdProduto">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.ProdutoModel.IdProduto">Editar</a> |
+    <a asp-page="./Index">Voltar à Listagem</a>
 </div>
