--- a/Pages/Shared/_Template.cshtml
+++ b/Pages/Shared/_Template.cshtml
@@ -37,5 +37,11 @@
             <span class="text-dark">Copyright &copy; 2024 - Todos os direitos reservados</span>
         </div>
     </footer>
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+    @RenderSection("Scripts", required: false)
+
 </body>
 </html>
