--- a/Pages/ClienteCRUD/Incluir.cshtml
+++ b/Pages/ClienteCRUD/Incluir.cshtml
@@ -3,39 +3,97 @@
 @{
     ViewData["Title"] = "Inclusão de Cliente";
 }
-<main class="container mt-3">  
+<main class="container mt-3">
     <div class="row justify-content-center">
         <div class="col-sm-12">
             <h1>@ViewData["Title"]</h1>
             <hr />
             <form method="post" class="mt-3">
                 <div asp-validation-summary="ModelOnly"></div>
-            <div class="form-group">
-                <label asp-for="Clientes.Nome" class="control-label"></label>
-                <input asp-for="Clientes.Nome" class="form-control col-6"/>
-                <span  asp-validation-for="Clientes.Nome" class="text-danger"></span>
-            </div>
-                <div class="form-group">
-                    <label asp-for="Clientes.DataNascimento" class="control-label"></label>
-                    <input asp-for="Clientes.DataNascimento" class="form-control col-3" />
-                    <span asp-validation-for="Clientes.DataNascimento" class="text-danger"></span>
+                <fieldset>
+                    <legend>Dados Pessoais</legend>
+                    <div class="form-group">
+                        <label asp-for="Cliente.Nome" class="control-label"></label>
+                        <input asp-for="Cliente.Nome" class="form-control col-6" />
+                        <span asp-validation-for="Cliente.Nome" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="Cliente.DataNascimento" class="control-label"></label>
+                        <input asp-for="Cliente.DataNascimento" class="form-control col-2" />
+                        <span asp-validation-for="Cliente.DataNascimento" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Cliente.CPF" class="control-label"></label>
+                        <input asp-for="Cliente.CPF" class="form-control col-2" />
+                        <span asp-validation-for="Cliente.CPF" class="text-danger"></span>
+                    </div>
+
+                </fieldset>
+                <fieldset>
+                    <legend>Contatos</legend>
+                    <div class="form-group">
+                        <label asp-for="Cliente.Email" class="control-label"></label>
+                        <input asp-for="Cliente.Email" class="form-control col-4" />
+                        <span asp-validation-for="Cliente.Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Cliente.Telefone" class="control-label"></label>
+                        <span>(com DDD, somente números)</span>
+                        <input asp-for="Cliente.Telefone" class="form-control col-2" placeholder="28999887766" />
+                        <span asp-validation-for="Cliente.Telefone" class="text-danger"></span>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <legend>Endereço</legend>
+                    <div class="form-group">
+                        <label asp-for="Cliente.Endereco.CEP" class="control-label"></label>
+                        <span>(somente números)</span>
+                        <div class="input-group">
+                            <input asp-for="Cliente.Endereco.CEP" class="form-control col-2"/>
+                            <div class="input-group-append">
+                                <span>
+                                    <i class="fi-xnsrsl-loading d-none" id="cep_loading"></i>
+                                    <i class="fi-xwsuxl-check d-none" id="cep_checked"></i>
+                                    <i class="fi-xwsuxl-times-wide" id="cep_none"></i>
+                                </span>
+                            </div>
+                        </div>
+                        <span class="text-muted d-block" id="endereco">Digite um CEP válido e aguarde.</span>
+                        <span asp-validation-for="Cliente.Endereco.CEP" class="text-danger"></span>
+                        <input type="hidden" asp-for="Cliente.Endereco.Logradouro" value=""/>
+                        <span asp-validation-for="Cliente.Endereco.Logradouro"></span>
+                        <input type="hidden" asp-for="Cliente.Endereco.Bairro" value="" />
+                        <input type="hidden" asp-for="Cliente.Endereco.Cidade" value=""/>
+                        <input type="hidden" asp-for="Cliente.Endereco.Estado" value="" />
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Cliente.Endereco.Numero" class="control-label"></label>
+                        <input asp-for="Cliente.Endereco.Numero" class="form-control col-2" />
+                        <span asp-validation-for="Cliente.Endereco.Numero" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Cliente.Endereco.Complemento" class="control-label"></label>
+                        <input asp-for="Cliente.Endereco.Complemento" class="form-control col-4" />
+                        <span asp-validation-for="Cliente.Endereco.Complemento" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Cliente.Endereco.Referencia" class="control-label"></label>
+                        <input asp-for="Cliente.Endereco.Referencia" class="form-control col-4" />
+                        <span asp-validation-for="Cliente.Endereco.Referencia" class="text-danger"></span>
+                    </div>
+                </fieldset>
+                <div class="form-group text-left">
+                    <a asp-page="./Listar" class="btn btn-info">Cancelar</a>
+                    <input type="submit" value="Salvar" class="btn btn-primary" />
                 </div>
-            <div class="form-group">
-                <label asp-for="Clientes.Email" class="control-label"></label>
-                <input asp-for="Clientes.Email"  class="form-control col-4" />
-                <span asp-validation-for="Clientes.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group text-left">
-                <a asp-page="./Listar" class="btn btn-info">Cancelar</a>
-                <input type="submit" value="Salvar" class="btn btn-primary"/>
-            </div>
-        </form>
+            </form>
         </div>
     </div>
 </main>
 
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{await Html.RenderPartialAsync("_CustomConfirm");}
+    @{await Html.RenderPartialAsync("_ConsultaCEP");}
 }
