add update pages incluir/alterar
Páginas adicionadas
Há pendencias a se resolver em ambas
Preparar Classe AppUtils.cs

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -9,26 +9,33 @@
 </div>
 
 <div class="row">
-    @foreach (var produto in Model.Produtos)
+    @if(Model.Produtos.Count > 0)
     {
-        <div class="col-sm-4">
-            <div class="card text-center bg-light mb-4">
-                <img class="card-img-top" src="/img/produto/@String.Concat(produto.IdProduto.ToString("D5"),
+        @foreach (var produto in Model.Produtos)
+        {
+            <div class="col-sm-4">
+                <div class="card text-center bg-light mb-4">
+                    <img class="card-img-top" src="/img/produto/@String.Concat(produto.IdProduto.ToString("D5"),
                 ".jpg")" alt="Imagem de @produto.Nome">
-                <div class="card-header">
-                    R$ @produto.Preco.ToString()
-                </div>
-                <div class="card-body" style="height:124px;">
-                    <h5 class="card-title">@produto.Nome</h5>
-                    <p class="card-text">@produto.Descricao</p>
-                </div>
-                <div class="card-footer">
-                    <div><a href="#" class="btn btn-primary">Adicionar ao Carrinho</a></div>
-                    <small class="text-muted">Estoque: @produto.Estoque</small>
+                    <div class="card-header">
+                        R$ @produto.Preco.ToString()
+                    </div>
+                    <div class="card-body" style="height:124px;">
+                        <h5 class="card-title">@produto.Nome</h5>
+                        <p class="card-text">@produto.Descricao</p>
+                    </div>
+                    <div class="card-footer">
+                        <div><a href="#" class="btn btn-primary">Adicionar ao Carrinho</a></div>
+                        <small class="text-muted">Estoque: @produto.Estoque</small>
+                    </div>
                 </div>
             </div>
-        </div>
+        }
+    }else
+    {
+        <h1 class="text-center">Não há produtos cadastrados</h1>
     }
+
 </div>
 
 @section Scripts{   
