--- a/Pages/ProdutoCRUD/Edit.cshtml
+++ b/Pages/ProdutoCRUD/Edit.cshtml
@@ -5,45 +5,62 @@
     ViewData["Title"] = "Edição de Produto";
 }
 
-<h1>@ViewData["Title"]</h1>
-
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ProdutoModel.IdProduto" />
-            <div class="form-group">
-                <label asp-for="ProdutoModel.Nome" class="control-label"></label>
-                <input asp-for="ProdutoModel.Nome" class="form-control" />
-                <span asp-validation-for="ProdutoModel.Nome" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProdutoModel.Descricao" class="control-label"></label>
-                <input asp-for="ProdutoModel.Descricao" class="form-control" />
-                <span asp-validation-for="ProdutoModel.Descricao" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProdutoModel.Preco" class="control-label"></label>
-                <input asp-for="ProdutoModel.Preco" class="form-control" />
-                <span asp-validation-for="ProdutoModel.Preco" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProdutoModel.Estoque" class="control-label"></label>
-                <input asp-for="ProdutoModel.Estoque" class="form-control" />
-                <span asp-validation-for="ProdutoModel.Estoque" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
-            </div>
-        </form>
+<main class="container mt-3">
+    <div class="row justify-content-center">
+        <div class="col-md-12">
+            <h1>@ViewData["Title"]</h1>
+            <hr />
+            <form method="post" class="mt-3" enctype="multipart/form-data">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="ProdutoModel.Nome" class="control-label"></label>
+                    <input asp-for="ProdutoModel.Nome" class="form-control col-6" />
+                    <span asp-validation-for="ProdutoModel.Nome" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ProdutoModel.Descricao" class="control-label"></label>
+                    <input asp-for="ProdutoModel.Descricao" class="form-control col-6" />
+                    <span asp-validation-for="ProdutoModel.Descricao" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ProdutoModel.Preco" class="control-label"></label>
+                    <input asp-for="ProdutoModel.Preco" class="form-control" />
+                    <span asp-validation-for="ProdutoModel.Preco" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ProdutoModel.Estoque" class="control-label"></label>
+                    <input asp-for="ProdutoModel.Estoque" class="form-control" />
+                    <span asp-validation-for="ProdutoModel.Estoque" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                <label asp-for="ImagemProduto" class="control-label"></label>
+                <div class="custom-file col-4 d-block">
+                <input asp-for="ImagemProduto" class="custom-file-input" accept="image/*" />
+                <label class="custom-file-label">clique aqui para alterar a imagem.</label>
+                </div>
+                <span asp-validation-for="ImagemProduto" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                <img src="@model.CaminhoImagem" class="image-thumbnail" asp-append-version="true"
+                style="max-height:300px;max-width:300px;border:solid 1px gray; border-radius:5px;" />
+                </div>
+                <div class="form-group text-left">
+                    <a asp-page="./Index" class="btn btn-info">Cancelar</a>
+                    <input type="submit" value="Salvar" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-page="./Index">Voltar à Listagem</a>
-</div>
+</main>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    @{
+        await Html.RenderPartialAsync("_CustomConfirm");
+    }
+    @{
+        await Html.RenderPartialAsync("_ConsultaCEP");
+    }
 }
