--- a/Pages/ProdutoCRUD/Edit.cshtml
+++ b/Pages/ProdutoCRUD/Edit.cshtml
@@ -10,7 +10,7 @@
         <div class="col-md-12">
             <h1>@ViewData["Title"]</h1>
             <hr />
-            <form method="post" class="mt-3" enctype="multipart/form-data">
+            <form method="post"  class="mt-3" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="ProdutoModel.Nome" class="control-label"></label>
@@ -41,7 +41,7 @@
                 <span asp-validation-for="ImagemProduto" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                <img src="@model.CaminhoImagem" class="image-thumbnail" asp-append-version="true"
+                <img src="@Model.CaminhoImagem" class="image-thumbnail" asp-append-version="true"
                 style="max-height:300px;max-width:300px;border:solid 1px gray; border-radius:5px;" />
                 </div>
                 <div class="form-group text-left">
