--- a/Pages/Admin.cshtml
+++ b/Pages/Admin.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @{
     ViewData["Title"] = "Área Administrativa";
-    Layout = "_Template";
+    Layout = "_BackTemplate";
 }
 
 <main class="container mt-3">
