--- a/Pages/ProdutoCRUD/Create.cshtml
+++ b/Pages/ProdutoCRUD/Create.cshtml
@@ -16,7 +16,7 @@
         <div class="col-md-12">
             <h1>@ViewData["Title"]</h1>
             <hr />
-            <form method="post" class="mt-3 mb-5">
+            <form method="post" class="mt-3 mb-5" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="ProdutoModel.Nome" class="control-label"></label>
@@ -38,22 +38,22 @@
                     <input asp-for="ProdutoModel.Estoque" class="form-control" />
                     <span asp-validation-for="ProdutoModel.Estoque" class="text-danger"></span>
                 </div>
-                @*  <label asp-for="ImagemProduto" class="control-label"></label>
+                <label asp-for="ImagemProduto" class="control-label"></label>
                 <div class="custom-file col-4 d-block">
-                <input asp-for="ImagemProduto" class="custom-file-input" accept="image/*" />
-                <label class="custom-file-label">Clique aqui para alterar a imagem.</label>
+                    <input asp-for="ImagemProduto" class="custom-file-input" accept="image/*" />
+                    <label class="custom-file-label">clique aqui para alterar a imagem.</label>
+                    <span asp-validation-for="ImagemProduto" class="text-danger"></span>
                 </div>
-                <span asp-validation-for="ImagemProduto" class="text-danger"></span>
-                </div> *@
                 <div class="form-group">
-                    
+
                     <div class="form-group">
-                    <img src="@Model.CaminhoImagem" class="image-thumbnail" asp-append-version="true"
-                         style="max-height:300px;max-width:300px;border:solid 1px gray; border-radius:5px;" />
+                        <img src="@Model.CaminhoImagem" class="image-thumbnail" asp-append-version="true"
+                             style="max-height:300px;max-width:300px;border:solid 1px gray; border-radius:5px;" />
+                    </div>
                 </div>
                 <div class="form-group text-left">
                     <a asp-page="./Index" class="btn btn-info">Cancelar</a>
-                    <input type="submit" value="Salvar"  class="btn btn-primary" />
+                    <input type="submit" value="Salvar" class="btn btn-primary" />
                 </div>
             </form>
         </div>
