--- a/Pages/ProdutoCRUD/Edit.cshtml
+++ b/Pages/ProdutoCRUD/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{id:int?}"
 @model AspNetCoreWebApp.Pages.ProdutoCRUD.EditModel
 
 @{
@@ -12,6 +12,7 @@
             <hr />
             <form method="post"  class="mt-3" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="ProdutoModel.IdProduto"/>
                 <div class="form-group">
                     <label asp-for="ProdutoModel.Nome" class="control-label"></label>
                     <input asp-for="ProdutoModel.Nome" class="form-control col-6" />
