add listarPage funcions
Delete function working
Add funtion working
Alter funcion working

--- a/Pages/ClienteCRUD/Listar.cshtml
+++ b/Pages/ClienteCRUD/Listar.cshtml
@@ -17,7 +17,7 @@
             <thead>
                 <tr>
                     <th>@Html.DisplayNameFor(m => m.Clientes[0].Nome)</th>
-                 @*    <th>@Html.DisplayNameFor(m => m.Clientes[0].CPF)</th> *@
+                    <th>@Html.DisplayNameFor(m => m.Clientes[0].CPF)</th>
                     <th>@Html.DisplayNameFor(m => m.Clientes[0].DataNascimento)</th>
                     <th>@Html.DisplayNameFor(m => m.Clientes[0].Email)</th>
                     <th class="text-center">Ações</th>
@@ -28,7 +28,7 @@
                 {
                     <tr>
                         <td>@Html.DisplayFor(modelItem => item.Nome)</td>
-                      @*   <td>@Html.DisplayFor(modelItem => item.CPF)</td> *@
+                        <td>@Html.DisplayFor(modelItem => item.CPF)</td>
                         <td>@Html.DisplayFor(modelItem => item.DataNascimento)</td>
                         <td>@Html.DisplayFor(modelItem => item.Email)</td>
                         <td class="text-center">
