--- a/Pages/ProdutoCRUD/Edit.cshtml
+++ b/Pages/ProdutoCRUD/Edit.cshtml
@@ -10,40 +10,40 @@
         <div class="col-md-12">
             <h1>@ViewData["Title"]</h1>
             <hr />
-            <form method="post"  class="mt-3" enctype="multipart/form-data">
+            <form method="post" class="mt-3" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" asp-for="ProdutoModel.IdProduto"/>
+                <input type="hidden" asp-for="Produto.IdProduto" />
                 <div class="form-group">
-                    <label asp-for="ProdutoModel.Nome" class="control-label"></label>
-                    <input asp-for="ProdutoModel.Nome" class="form-control col-6" />
-                    <span asp-validation-for="ProdutoModel.Nome" class="text-danger"></span>
+                    <label asp-for="Produto.Nome" class="control-label"></label>
+                    <input asp-for="Produto.Nome" class="form-control col-6" />
+                    <span asp-validation-for="Produto.Nome" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="ProdutoModel.Descricao" class="control-label"></label>
-                    <input asp-for="ProdutoModel.Descricao" class="form-control col-6" />
-                    <span asp-validation-for="ProdutoModel.Descricao" class="text-danger"></span>
+                    <label asp-for="Produto.Descricao" class="control-label"></label>
+                    <input asp-for="Produto.Descricao" class="form-control col-6" />
+                    <span asp-validation-for="Produto.Descricao" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="ProdutoModel.Preco" class="control-label"></label>
-                    <input asp-for="ProdutoModel.Preco" class="form-control" />
-                    <span asp-validation-for="ProdutoModel.Preco" class="text-danger"></span>
+                    <label asp-for="Produto.Preco" class="control-label"></label>
+                    <input asp-for="Produto.Preco" class="form-control" />
+                    <span asp-validation-for="Produto.Preco" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="ProdutoModel.Estoque" class="control-label"></label>
-                    <input asp-for="ProdutoModel.Estoque" class="form-control" />
-                    <span asp-validation-for="ProdutoModel.Estoque" class="text-danger"></span>
+                    <label asp-for="Produto.Estoque" class="control-label"></label>
+                    <input asp-for="Produto.Estoque" class="form-control" />
+                    <span asp-validation-for="Produto.Estoque" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                <label asp-for="ImagemProduto" class="control-label"></label>
-                <div class="custom-file col-4 d-block">
-                <input asp-for="ImagemProduto" class="custom-file-input" accept="image/*" />
-                <label class="custom-file-label">clique aqui para alterar a imagem.</label>
-                </div>
-                <span asp-validation-for="ImagemProduto" class="text-danger"></span>
+                    <label asp-for="ImagemProduto" class="control-label"></label>
+                    <div class="custom-file col-4 d-block">
+                        <input asp-for="ImagemProduto" class="custom-file-input" accept="image/*" />
+                        <label class="custom-file-label">clique aqui para alterar a imagem.</label>
+                    </div>
+                    <span asp-validation-for="ImagemProduto" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                <img src="@Model.CaminhoImagem" class="image-thumbnail" asp-append-version="true"
-                style="max-height:300px;max-width:300px;border:solid 1px gray; border-radius:5px;" />
+                    <img src="@Model.CaminhoImagem" class="image-thumbnail" asp-append-version="true"
+                         style="max-height:300px;max-width:300px;border:solid 1px gray; border-radius:5px;" />
                 </div>
                 <div class="form-group text-left">
                     <a asp-page="./Index" class="btn btn-info">Cancelar</a>
@@ -58,10 +58,5 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-    @{
-        await Html.RenderPartialAsync("_CustomConfirm");
-    }
-    @{
-        await Html.RenderPartialAsync("_ConsultaCEP");
-    }
+   
 }
