--- a/Pages/ProdutoCRUD/Index.cshtml
+++ b/Pages/ProdutoCRUD/Index.cshtml
@@ -8,53 +8,55 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-page="Create">Criar Produto</a>
+    <a asp-page="Create">
+        <button class="btn btn-primary btn-sm">Criar Produto</button>
+        </a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.ProdutoModel[0].Nome)
+                @Html.DisplayNameFor(model => model.Produto[0].Nome)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ProdutoModel[0].Descricao)
+                @Html.DisplayNameFor(model => model.Produto[0].Descricao)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ProdutoModel[0].Preco)
+                @Html.DisplayNameFor(model => model.Produto[0].Preco)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ProdutoModel[0].Estoque)
+                @Html.DisplayNameFor(model => model.Produto[0].Estoque)
             </th>
             <th class="text-center">Ações</th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model.ProdutoModel)
+        @foreach (var item in Model.Produto)
         {
-            <tr>
-                <td>
+                <tr>
+                    <td>
                     @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td>
+                    </td>
+                    <td>
                     @Html.DisplayFor(modelItem => item.Descricao)
-                </td>
-                <td>
+                    </td>
+                    <td>
                     @Html.DisplayFor(modelItem => item.Preco)
-                </td>
-                <td>
+                    </td>
+                    <td>
                     @Html.DisplayFor(modelItem => item.Estoque)
-                </td>
-                <td class="text-center">
-                    <a class="btn btn-primary btn-sm" asp-page="./Edit" asp-route-id="@item.IdProduto">Editar</a> |
-                    <form class="d-inline-block" asp-page-handler="delete" asp-route-id="@item.IdProduto" method="post">
-                        <button class="btn btn-danger btn-sm"
-                                onclick="confirmarExclusao(this);" type="button">
-                            Excluir
-                        </button>
-                    </form>
-                    <a asp-page="./Delete" asp-route-id="@item.IdProduto">Apagar</a>
-                </td>
-            </tr>
+                    </td>
+                    <td class="text-center">
+                        <a class="btn btn-primary btn-sm" asp-page="./Edit" asp-route-id="@item.IdProduto">Editar</a> |
+                        <form class="d-inline-block" asp-page-handler="delete" asp-route-id="@item.IdProduto" method="post">
+                            <button class="btn btn-danger btn-sm"
+                                    onclick="confirmarExclusao(this);" type="button">
+                                Excluir
+                            </button>
+                        </form>
+
+                    </td>
+                </tr>
         }
     </tbody>
 </table>
@@ -62,5 +64,8 @@
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    @{
+        await Html.RenderPartialAsync("_CustomConfirm");
     }
 }
