--- a/Pages/ClienteCRUD/Incluir.cshtml
+++ b/Pages/ClienteCRUD/Incluir.cshtml
@@ -8,6 +8,7 @@
         <div class="col-sm-12">
             <h1>@ViewData["Title"]</h1>
             <hr />
+            <h1>@ViewData["Message"]</h1>
             <form method="post" class="mt-3">
                 <div asp-validation-summary="ModelOnly"></div>
                 <fieldset>
@@ -40,7 +41,7 @@
                     <div class="form-group">
                         <label asp-for="Cliente.Telefone" class="control-label"></label>
                         <span>(com DDD, somente números)</span>
-                        <input asp-for="Cliente.Telefone" class="form-control col-2" placeholder="28999887766" />
+                        <input asp-for="Cliente.Telefone" class="form-control col-2" placeholder="00000000000" />
                         <span asp-validation-for="Cliente.Telefone" class="text-danger"></span>
                     </div>
                 </fieldset>
