add gambi view cliente
Cadastro do cliente ocorre de forma
incorreta.

--- a/Pages/ProdutoCRUD2/Details.cshtml
+++ b/Pages/ProdutoCRUD2/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@* @page
 @model AspNetCoreWebApp.Pages.ProdutoCRUD2.DetailsModel
 
 @{
@@ -42,3 +42,4 @@
     <a asp-page="./Edit" asp-route-id="@Model.ProdutoModel.IdProduto">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
+ *@
