--- a/Pages/ProdutoCRUD2/Edit.cshtml
+++ b/Pages/ProdutoCRUD2/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@* @page
 @model AspNetCoreWebApp.Pages.ProdutoCRUD2.EditModel
 
 @{
@@ -49,3 +49,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+ *@
