--- a/Pages/Shared/Display Templates/_CustomCPF.cshtml
+++ b/Pages/Shared/Display Templates/_CustomCPF.cshtml
@@ -1,6 +1,5 @@
-﻿@* @model System.String
+﻿@model System.String
 
 <span>
     @($"{Model.Substring(0,3)}.{Model.Substring(3,3)}.{Model.Substring(6,3)}-{Model.Substring(9,2)}")
 </span>
- *@
