--- a/Pages/Shared/_ConsultaCEP.cshtml
+++ b/Pages/Shared/_ConsultaCEP.cshtml
@@ -30,7 +30,7 @@
 
                         if (!("erro" in dados)) {
                             $("#Cliente_Endereco_Logradouro").val(dados.logradouro);
-                            $("#Cliente_Endereco_Bairro").val(dados.bairo);
+                            $("#Cliente_Endereco_Bairro").val(dados.bairro);
                             $("#Cliente_Endereco_Cidade").val(dados.localidade);
                             $("#Cliente_Endereco_Estado").val(dados.uf);
                             $("#endereco").text(dados.logradouro + ", " + dados.bairro + ", " +
