--- a/Pages/ClienteCRUD/Incluir.cshtml
+++ b/Pages/ClienteCRUD/Incluir.cshtml
@@ -8,7 +8,9 @@
         <div class="col-sm-12">
             <h1>@ViewData["Title"]</h1>
             <hr />
-            <h1>@ViewData["Message"]</h1>
+            <h1>@ViewData["L"]</h1>
+           
+            
             <form method="post" class="mt-3">
                 <div asp-validation-summary="ModelOnly"></div>
                 <fieldset>
@@ -95,6 +97,5 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    @{await Html.RenderPartialAsync("_CustomConfirm");}
     @{await Html.RenderPartialAsync("_ConsultaCEP");}
 }
