--- a/Pages/ClienteCRUD/Listar.cshtml
+++ b/Pages/ClienteCRUD/Listar.cshtml
@@ -52,7 +52,7 @@
 </main>
 
 @section Scripts{
-    @{
-        await Html.RenderPartialAsync("_CustomConfirm");
-    }
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{await Html.RenderPartialAsync("_CustomConfirm");}
+   @*  @{await Html.RenderPartialAsync("_CustomCPF");}  *@
 }
