--- a/Pages/ProdutoCRUD2/Create.cshtml
+++ b/Pages/ProdutoCRUD2/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@*     @page
 @model AspNetCoreWebApp.Pages.ProdutoCRUD2.CreateModel
 
 @{
@@ -48,3 +48,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+ *@
