--- a/Pages/ProdutoCRUD2/Delete.cshtml
+++ b/Pages/ProdutoCRUD2/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@* @page
 @model AspNetCoreWebApp.Pages.ProdutoCRUD2.DeleteModel
 
 @{
@@ -45,3 +45,4 @@
         <a asp-page="./Index">Back to List</a>
     </form>
 </div>
+ *@
