--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,39 +5,89 @@
 }
 
 <div class="text-center">
-    <h1>Bem vindo</h1>
+    <h1 class="display-4">Bem vindo a Quitanda Online</h1>
+    <h4>Produtos frescos todos os dias, entregues na porta da sua casa.</h4>
+    <hr />
 </div>
 
 <div class="row">
-    <div class="col-12 mb3">
-        <form class="form-check-inline float-lg-end">
-            <label>Ordem de exibição:</label>&nbsp;
-            <select class="form-control custom-select-sm" id="selectOrdem">
-                <option value="0">Selecione a opção desejada</option>
-                <option value="1">Ordenar pelo nome do produto</option>
-                <option value="2">Ordenar pelo menor preço</option>
-                <option value="3">Ordenar pelo maior preço</option>
-            </select>
+    <div class="col-12 col-md-6">
+        <form class="form-inline justify-content-center justify-content-md-start mb-sm-3 mb-md-0"
+              action="/Index" method="get" id="formBusca">
+            <input type="text" name="q" id="q" placeholder="Nome do produto a buscar"
+                   class="form-control form-control-sm mr-sm-2" />
+            <input type="hidden" name="o" value="0" id="o"/>
+            <input type="hidden" name="p" value="1" id="p"/>
+            <button class="btn btn-sm btn-success my-2 my-sm-0 form-control form-control-sm">Buscar</button>
         </form>
     </div>
+    <div class="col-12 col-md-6">
+        <div class="d-flex flex-row-reverse justify-content-md-start justify-content-center">
+            <form class="form-inline ml-3 d-inline-block">
+                <select class="form-control custom-select-sm selectOrdem">
+                    <option value="1">Ordenar pelo nome do produto</option>
+                    <option value="2">Ordenar pelo menor preço</option>
+                    <option value="3">Ordenar pelo maior preço</option>
+                </select>
+            </form>
+            <nav class="d-inline-block">
+                <ul class="pagination pagination-sm my-0">
+                    @for(int i = 1; i <= Model.QuantidadePaginas; i++)
+                    {
+                        if(i == Model.PaginaAtual)
+                        {
+                            <li class="page-item disabled">
+                                <button class="page-link" value="@i">@i</button>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="page-item">
+                                <button class="page-link" value="@i">@i</button>
+                            </li>
+                        }
+
+                    }
+                </ul>
+            </nav>
+        </div>
+
+    </div>
+</div>
+<hr class="mt-3" />
+<div class="row">
     @if (Model.Produtos.Count > 0)
     {
         @foreach (var produto in Model.Produtos)
         {
-            <div class="col-sm-4">
+            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
                 <div class="card text-center bg-light mb-4">
-                    <img class="card-img-top" src="/img/produto/@String.Concat(produto.IdProduto.ToString("D5"),
+                    <img class="card-img-top" src="/img/produto/@String.Concat(produto.IdProduto.ToString("D6"),
                 ".jpg")" alt="Imagem de @produto.Nome">
                     <div class="card-header">
                         R$ @produto.Preco.ToString()
                     </div>
-                    <div class="card-body" style="height:124px;">
+                    <div class="card-body">
                         <h5 class="card-title">@produto.Nome</h5>
                         <p class="card-text">@produto.Descricao</p>
                     </div>
                     <div class="card-footer">
-                        <div><a href="#" class="btn btn-primary">Adicionar ao Carrinho</a></div>
-                        <small class="text-muted">Estoque: @produto.Estoque</small>
+                        @if (produto.Estoque > 0)
+                        {
+                            <div><a href="#" class="btn btn-danger">Adicionar ao Carrinho</a></div>
+                            <small class="text-success">Estoque: @produto.Estoque</small>
+                        }
+                        else
+                        {
+                            <div>
+                                <button class="btn btn-light disabled" disabled>
+                                    <small>
+                                        Aguardando Reabastecimento
+                                    </small>
+                                </button>
+                            </div>
+                            <small class="text-danger">Produto Esgotado</small>
+                        }
                     </div>
                 </div>
             </div>
@@ -65,7 +115,42 @@
     }
 
 </div>
+<hr class="mt-3"/>
 
+<div class="row">
+    <div class="col-12">
+        <div class="d-flex flex-row-reverse justify-content-md-start justify-content-center">
+            <form class="form-inline ml-3 d-inline-block">
+                <select class="form-control custom-select-sm selectOrdem">
+                    <option value="1">Ordenar pelo nome do produto</option>
+                    <option value="2">Ordenar pelo menor preço</option>
+                    <option value="3">Ordenar pelo maior preço</option>
+                </select>
+            </form>
+            <nav class="d-inline-block">
+                <ul class="pagination pagination-sm my-0">
+                    @for (int i = 1; i <= Model.QuantidadePaginas; i++)
+                    {
+                        if (i == Model.PaginaAtual)
+                        {
+                            <li class="page-item disabled">
+                                <button class="page-link" value="@i">@i</button>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="page-item">
+                                <button class="page-link" value="@i">@i</button>
+                            </li>
+                        }
+
+                    }
+                </ul>
+            </nav>
+        </div>
+
+    </div>
+</div>
 @section Scripts {
 
     <script>
@@ -83,14 +168,24 @@
         $(document).ready(function () {
             var qs = getUrlVars();
             if (qs["o"] != null) {
-                $("#selectOrdem").val(qs["o"]);
+                $(".selectOrdem").val(qs["o"]);
                 $("#o").val(qs["o"]);
             }
+            else { 
+                $(".selectOrdem").val("1");
+                $("o").val("1");
+            }
+            if(qs["q"] != null){
+                $("#q").val(qs["q"])
+            }
         });
-        $("#selectOrdem").change(function () {
-            $("#o").val($("#selectOrdem").val());
+        $(".selectOrdem").change(function () {
+            $("#o").val($(this).val());
             $("#formBusca").submit();
-
+        });
+        $(".page-link").click(function () {
+            $("#p").val($(this).val());
+            $("#formBusca").submit();
         });
     </script>
 
