--- a/Pages/ProdutoCRUD/Create.cshtml
+++ b/Pages/ProdutoCRUD/Create.cshtml
@@ -16,26 +16,26 @@
         <div class="col-md-12">
             <h1>@ViewData["Title"]</h1>
             <hr />
-            <form method="post" class="mt-3 mb-5" enctype="multipart/form-data">
+            <form method="post" class="mt-3" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="ProdutoModel.Nome" class="control-label"></label>
-                    <input asp-for="ProdutoModel.Nome" class="form-control" />
+                    <input asp-for="ProdutoModel.Nome" class="form-control col-6" />
                     <span asp-validation-for="ProdutoModel.Nome" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="ProdutoModel.Descricao" class="control-label"></label>
-                    <input asp-for="ProdutoModel.Descricao" class="form-control" />
+                    <textarea asp-for="ProdutoModel.Descricao" class="form-control col-6" rows="6"></textarea>
                     <span asp-validation-for="ProdutoModel.Descricao" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="ProdutoModel.Preco" class="control-label"></label>
-                    <input asp-for="ProdutoModel.Preco" class="form-control" />
+                    <input asp-for="ProdutoModel.Preco" class="form-control col-2"/>
                     <span asp-validation-for="ProdutoModel.Preco" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="ProdutoModel.Estoque" class="control-label"></label>
-                    <input asp-for="ProdutoModel.Estoque" class="form-control" />
+                    <input asp-for="ProdutoModel.Estoque" class="form-control col-2" />
                     <span asp-validation-for="ProdutoModel.Estoque" class="text-danger"></span>
                 </div>
                 <label asp-for="ImagemProduto" class="control-label"></label>
