--- a/Pages/ProdutoCRUD/Edit.cshtml
+++ b/Pages/ProdutoCRUD/Edit.cshtml
@@ -20,17 +20,17 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Produto.Descricao" class="control-label"></label>
-                    <input asp-for="Produto.Descricao" class="form-control col-6" />
+                    <textarea asp-for="Produto.Descricao" class="form-control col-6" rows="6"> </textarea>/te>
                     <span asp-validation-for="Produto.Descricao" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Produto.Preco" class="control-label"></label>
-                    <input asp-for="Produto.Preco" class="form-control" />
+                    <input asp-for="Produto.Preco" class="form-control col-2" />
                     <span asp-validation-for="Produto.Preco" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Produto.Estoque" class="control-label"></label>
-                    <input asp-for="Produto.Estoque" class="form-control" />
+                    <input asp-for="Produto.Estoque" class="form-control col-2" />
                     <span asp-validation-for="Produto.Estoque" class="text-danger"></span>
                 </div>
                 <div class="form-group">
