--- a/Pages/Shared/_BackTemplate.cshtml
+++ b/Pages/Shared/_BackTemplate.cshtml
@@ -27,7 +27,7 @@
             </nav>
         </div>
     </header>
-    <section class="container">
+    <section class="container" style="padding-bottom:72px;">
         <main role="main">
             @RenderBody()
         </main>
