--- a/Pages/Shared/_FrontTemplate.cshtml
+++ b/Pages/Shared/_FrontTemplate.cshtml
@@ -34,6 +34,7 @@
         </nav>
     </header>
     <div class="container">
+        <partial name="_CookieConsentPartial"></partial>
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
