--- a/Pages/Shared/_FrontTemplate.cshtml
+++ b/Pages/Shared/_FrontTemplate.cshtml
@@ -29,6 +29,15 @@
                     <div class="align-self-end">
                         <partial name="_LoginLinks" /> 
                     </div>
+                    <div class="align-self-end">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" id="carrinho" asp-page="/Carrinho">
+                                <i class="fi-xnluxl-shopping-cart"></i>    
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
